# fitnessbase

./: .env  .gitignore  Procfile  app.py  config.py  create_admin.py  models.py  pyproject.toml  railway.toml  requirements.txt
SQL/: db.sql
app/: __init__.py  models.py
app/admin/: routes.py
app/auth/: routes.py
app/routes/: admin.py
app/staff/: routes.py
app/templates/: base.html
app/templates/admin/: attendance.html  dashboard.html  inventory.html  members.html  membership.html
app/templates/admin/inventory/: add.html  edit.html
app/templates/admin/members/: add.html  edit.html  list.html  view.html
app/templates/admin/products/: add.html  edit.html
app/templates/admin/sales/: add.html  list.html  receipt.html
app/templates/admin/staff/: add.html  attendance.html  edit.html  list.html
app/templates/auth/: login.html
app/templates/errors/: 404.html
app/templates/staff/: dashboard.html  edit_profile.html  membership.html  profile.html
fitnessbase/: __init__.py
fitnessbase-env/: pyvenv.cfg
fitnessbase-env/Scripts/: activate  activate.bat
fitnessbase.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
