[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "fitnessbase"
version = "0.1.0"
description = "A fitness tracking application"
authors = [
    {name = "Danish Javed", email = "your.email@example.com"}
]
dependencies = [
    "flask",
    "flask-sqlalchemy",
    "flask-login",
    "python-dotenv",
    "bcrypt",
    "psycopg2-binary"
]
requires-python = ">=3.8"

[tool.setuptools]
packages = ["fitnessbase"]